fix: update some elem gaps and padding for better spacing

--- a/src/styles.css
+++ b/src/styles.css
@@ -194,7 +194,7 @@ header {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 12px;
+  gap: 1.5rem;
   padding: 20px;
 }
 
@@ -202,13 +202,13 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 0.75rem;
+  gap: 1.5rem;
 }
 
 .social-links {
   display: flex;
   justify-content: center;
-  gap: 0.75rem;
+  gap: 1.25rem;
 }
 
 .social-links svg {
@@ -224,7 +224,7 @@ main {
   flex-direction: column;
   align-items: center;
   padding: 100px 20px 200px 20px;
-  gap: 20px;
+  gap: 1.5rem;
 }
 
 main h2 {
@@ -233,12 +233,9 @@ main h2 {
 
 .project-cards-container {
   display: grid;
-  grid-template-columns: repeat(
-    auto-fit,
-    minmax(clamp(300px, 15rem, 440px), 1fr)
-  );
+  grid-template-columns: repeat(auto-fit, minmax(300, 1fr));
   place-content: center;
-  gap: 52px;
+  gap: clamp(40px, 3.75rem, 80px);
   width: 100%;
 }
 
@@ -269,7 +266,7 @@ main h2 {
 
 .project-info-container {
   min-height: 240px;
-  gap: 0.5rem;
+  gap: 0.75rem;
   padding: clamp(16px, 1rem, 32px);
 }
 
@@ -277,13 +274,14 @@ main h2 {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  gap: 0.75rem;
 }
 
 .project-links {
   flex-shrink: 0;
   display: flex;
   align-items: center;
-  gap: 1rem;
+  gap: 1.25rem;
 }
 
 .project-links svg {
@@ -422,14 +420,21 @@ p.bigger-font {
     align-self: flex-start;
   }
 
+  .project-cards-container {
+    grid-template-columns: repeat(
+      auto-fit,
+      minmax(clamp(300px, 15rem, 440px), 1fr)
+    );
+  }
+
   /* ==== Contact ==== */
 
   footer {
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
-    gap: 20px;
-    padding: 40px;
+    gap: clamp(20px, 1.25rem, 40px);
+    padding: clamp(40px, 2.5rem, 60px);
     padding-bottom: 60px;
   }
 
